src/objects/zkmulti__HazMatCommodity__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__HazardClass__c</fullName>
        <label>Hazard Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__PackingGroup__c</fullName>
        <description>Identifies DOT packing group for a hazardous commodity</description>
        <inlineHelpText>Identifies DOT packing group for a hazardous commodity</inlineHelpText>
        <label>Packing Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEFAULT</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__ProperShippingName__c</fullName>
        <label>Proper Shipping Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__QuantityAmountUnits__c</fullName>
        <description>Units by which the hazardous commodity is measured. For IATA commodity, the units values are restricted based on regulation type</description>
        <inlineHelpText>Units by which the hazardous commodity is measured. For IATA commodity, the units values are restricted based on regulation type</inlineHelpText>
        <label>Quantity Amount Units</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__QuantityAmount__c</fullName>
        <description>Number of units, in the units specified by the Quantity Amount Units</description>
        <inlineHelpText>Number of units, in the units specified by the Quantity Amount Units</inlineHelpText>
        <label>Quantity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__RegulatoryId__c</fullName>
        <description>Regulatory identifier for a commodity (e.g. &quot;UN ID&quot; value)</description>
        <inlineHelpText>Regulatory identifier for a commodity (e.g. &quot;UN ID&quot; value)</inlineHelpText>
        <label>Regulatory ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>HazMat Commodity</label>
    <nameField>
        <label>HazMat Commodity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HazMat Commodities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>